tdf#143854: Revert "tdf#57585 Add new bullet behaviour to impress"

This reverts commit 070a5b039b181c380b1b9724a015314ff78c30ed.

Reason for revert: Many PPT files are affected when saved to ODP.
I waited a while before reverting it but not reaction from the
developer

Change-Id: Ibfd2f508930e1a3ef56961536454ea1eda55f8c6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122061
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>